--- a/login/templates/granja.html
+++ b/login/templates/granja.html
@@ -1,14 +1,11 @@
-{% extends "adminlte/base.html" %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>Document</title>
 </head>
 <body>
-    
-
-
+    <h1> primera prueba de Compromisos granja</h1>
 </body>
 </html>
