--- a/login/templates/base.html
+++ b/login/templates/base.html
@@ -23,11 +23,11 @@
 {% block body %}
     <div class="wrapper">
         {% block nav_header %}
-            {% include 'adminlte/lib/_main_header.html' %}
+            {% include '_main_header.html' %}
         {% endblock %}
 
         {% block nav_sidebar %}
-            {% include 'adminlte/lib/_main_sidebar.html' %}
+            {% include '_main_sidebar.html' %}
         {% endblock %}
 
         {% block content_wrapper %}
