--- a/login/templates/financiera.html
+++ b/login/templates/financiera.html
@@ -29,7 +29,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <h3 class="card-title">DataTable with default features</h3>
+                        <h3 class="card-title">DATOS FINANCIEROS</h3>
                     </div>
 
                     <!-- /.card-header -->
@@ -48,6 +48,15 @@
                             </thead>
                             <tbody>
                                 <tr>
+                                    <td>Gecko</td>
+                                    <td>Internet
+                                        Explorer 4.0
+                                    </td>
+                                    <td>Win 95+</td>
+                                    <td> 3</td>
+                                    <td>X</td>
+                                </tr>
+                                <tr>
                                     <td>Trident</td>
                                     <td>Internet
                                         Explorer 4.0
@@ -58,81 +67,26 @@
                                 </tr>
                                 <tr>
                                     <td>Trident</td>
-                                    <td>Internet
-                                        Explorer 5.0
+                                    <td>Opera
                                     </td>
                                     <td>Win 95+</td>
-                                    <td>5</td>
-                                    <td>C</td>
+                                    <td> 5</td>
+                                    <td>X</td>
                                 </tr>
                                 <tr>
                                     <td>Trident</td>
-                                    <td>Internet
-                                        Explorer 5.5
+                                    <td>gx
                                     </td>
                                     <td>Win 95+</td>
-                                    <td>5.5</td>
-                                    <td>A</td>
+                                    <td> 4</td>
+                                    <td>X</td>
                                 </tr>
-                                <tr>
-                                    <td>Trident</td>
-                                    <td>Internet
-                                        Explorer 6
-                                    </td>
-                                    <td>Win 98+</td>
-                                    <td>6</td>
-                                    <td>A</td>
-                                </tr>
-                                <tr>
-                                    <td>Trident</td>
-                                    <td>Internet Explorer 7</td>
-                                    <td>Win XP SP2+</td>
-                                    <td>7</td>
-                                    <td>A</td>
-                                </tr>
-                                <tr>
-                                    <td>Trident</td>
-                                    <td>AOL browser (AOL desktop)</td>
-                                    <td>Win XP</td>
-                                    <td>6</td>
-                                    <td>A</td>
-                                </tr>
-                                <tr>
-                                    <td>Gecko</td>
-                                    <td>Firefox 1.0</td>
-                                    <td>Win 98+ / OSX.2+</td>
-                                    <td>1.7</td>
-                                    <td>A</td>
-                                </tr>
-                                <tr>
-                                    <td>Gecko</td>
-                                    <td>Firefox 1.5</td>
-                                    <td>Win 98+ / OSX.2+</td>
-                                    <td>1.8</td>
-                                    <td>A</td>
-                                </tr>
-                                <tr>
-                                    <td>Gecko</td>
-                                    <td>Firefox 2.0</td>
-                                    <td>Win 98+ / OSX.2+</td>
-                                    <td>1.8</td>
-                                    <td>A</td>
-                                </tr>
-                                <tr>
-                                    <td>Gecko</td>
-                                    <td>Firefox 3.0</td>
-                                    <td>Win 2k+ / OSX.3+</td>
-                                    <td>1.9</td>
-                                    <td>A</td>
-                                </tr>
-                                <tr>
-                                    <td>Gecko</td>
-                                    <td>Camino 1.0</td>
-                                    <td>OSX.2+</td>
-                                    <td>1.8</td>
-                                    <td>A</td>
-                                </tr>
+                                
+                            
+                                
 
+    
+                                <!-- Otros datos de la tabla -->
                             </tbody>
 
                         </table>
@@ -170,22 +124,13 @@
 
     <!-- page script -->
     <script>
-        $(function () {
-            $("#example1").DataTable({
-                "responsive": true, "lengthChange": false, "autoWidth": false,
-                "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
-            }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
+        $(document).ready(function() {
             $('#example1').DataTable({
-                "paging": true,
-                "lengthChange": false,
-                "searching": false,
-                "ordering": true,
-                "info": true,
-                "autoWidth": false,
-                "responsive": true,
+                "searching": true
             });
         });
     </script>
+
 </body>
 
 </html>
