--- a/login/templates/base.html
+++ b/login/templates/base.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     {% block title_outer %}
-        <title>{% block title %}{{ site.name }}{% endblock %}</title>
+        <title>{% block title %}Centro de Servicios{% endblock %}</title>
     {% endblock %}
 
     {% block meta %}
@@ -72,7 +72,7 @@
         {% endblock content_wrapper %}
         
         {% block nav_footer %}
-            {% include 'adminlte/lib/_main_footer.html' %}
+            {% include '_main_footer.html' %}
         {% endblock %}
 
     </div>
