--- a/login/templates/financiera.html
+++ b/login/templates/financiera.html
@@ -36,6 +36,7 @@
                     <div class="card-body">
                         <label>Search:<input type="search" class="form-control form-control-sm" placeholder=""
                                 aria-controls="example1"></label>
+                                <button class="btn btn-success" type="submit">actualizar</button>
                         <table id="example1" class="table table-bordered table-striped">
                             <thead>
                                 <tr>
@@ -43,7 +44,7 @@
                                     <th>Browser</th>
                                     <th>Platform(s)</th>
                                     <th>Engine version</th>
-                                    <th>CSS grade</th>
+                                    <th>valor</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -54,7 +55,7 @@
                                     </td>
                                     <td>Win 95+</td>
                                     <td> 3</td>
-                                    <td>X</td>
+                                    <td contenteditable="true"></td>
                                 </tr>
                                 <tr>
                                     <td>Trident</td>
@@ -63,7 +64,7 @@
                                     </td>
                                     <td>Win 95+</td>
                                     <td> 4</td>
-                                    <td>X</td>
+                                    <td contenteditable="true"></td>
                                 </tr>
                                 <tr>
                                     <td>Trident</td>
@@ -71,7 +72,7 @@
                                     </td>
                                     <td>Win 95+</td>
                                     <td> 5</td>
-                                    <td>X</td>
+                                    <td contenteditable="true"></td>
                                 </tr>
                                 <tr>
                                     <td>Trident</td>
@@ -79,7 +80,23 @@
                                     </td>
                                     <td>Win 95+</td>
                                     <td> 4</td>
-                                    <td>X</td>
+                                    <td contenteditable="true"></td>
+                                </tr>
+                                <tr>
+                                    <td>Trident</td>
+                                    <td>gx
+                                    </td>
+                                    <td>Win 95+</td>
+                                    <td> 4</td>
+                                    <td contenteditable="true"></td>
+                                </tr>
+                                <tr>
+                                    <td>Trident</td>
+                                    <td>gx
+                                    </td>
+                                    <td>Win 95+</td>
+                                    <td> 4</td>
+                                    <td contenteditable="true"></td>
                                 </tr>
                                 
                             
@@ -90,6 +107,7 @@
                             </tbody>
 
                         </table>
+                        
                     </div>
                     <!-- /.card-body -->
                 </div>
