--- a/login/templates/granja.html
+++ b/login/templates/granja.html
@@ -24,12 +24,13 @@
     <div class="card-body">
       <div class="row">
         <div class="col-md-6">
-          <form method="post" enctype="multipart/form-data">
+          <form method="post" action="{% url 'cargar_excel' %}" enctype="multipart/form-data">
             {% csrf_token %}
             <label for="archivo_excel">Selecciona un archivo Excel:</label>
             <input class="btn btn-info" type="file" name="archivo_excel" accept=".xlsx, .xls">
             <br>
             <button class="btn btn-success" type="submit">Cargar Datos</button>
+
             <!-- <a class="btn btn-primary" href="/myapp/grafico_pie">
             Reportes</a> -->
         
@@ -45,6 +46,7 @@
       los valores ingresados aqui, no pueden ser cambiados luego de ingresarlos.
     </div>
   </div>
+
   <!-- /.card -->
 </body>
 
