--- a/login/templates/report_prov.html
+++ b/login/templates/report_prov.html
@@ -4,8 +4,103 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reporte Proveeduria</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="/static/admin-lte/plugins/fontawesome-free/css/all.min.css">
+    <!-- Ionicons -->
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <!-- DataTables -->
+    <link rel="stylesheet" href="/static/admin-lte/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="/static/admin-lte/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
+    <!-- Theme style -->
+    <link rel="stylesheet" href="/static/admin-lte/dist/css/adminlte.min.css">
+    <!-- Google Font: Source Sans Pro -->
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
 <body>
     <h1>REPORTE PROVEEDURIAAA</h1>
+
+    <!-- Main content -->
+    <section class="content">
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="card-title">informe proveeduria</h3>
+                    </div>
+
+                    <!-- /.card-header -->
+                    <div class="card-body">
+
+                        <label>Search:<input type="search" class="form-control form-control-sm" placeholder=""
+                                aria-controls="example1"></label>
+                        <!-- <button class="btn btn-success" type="submit">actualizar</button> -->
+                        <table id="example1" class="table table-bordered table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Granja</th>
+                                    <th>Mes</th>
+                                    <th>Semana</th>
+                                    <th>Cantidad de Cerdos</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- Los datos se llenarán aquí -->
+                            </tbody>
+                        </table>
+                        
+
+                    </div>
+                    <!-- /.card-body -->
+                </div>
+                <!-- /.card -->
+            </div>
+            <!-- /.col -->
+        </div>
+        <!-- /.row -->
+    </section>
+    <!-- /.content -->
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $.ajax({
+                url: '/reproved/',
+                type: 'GET',
+                success: function (response) {
+                    response.data.forEach(function (compromiso) {
+                        $('#example1 tbody').append('<tr><td>' + compromiso.granja + '</td><td>' + compromiso.mes + '</td><td>' + compromiso.semana + '</td><td>' + compromiso.cantidad_cerdos + '</td></tr>');
+                    });
+                }
+            });
+        });
+
+        $(document).ready(function () {
+            $('#example1').DataTable({
+                "searching": true
+            });
+        });
+    </script>
+
+    <script src="/static/admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <script src="/static/admin-lte/plugins/datatables/jquery.dataTables.min.js"></script>
+    <script src="/static/admin-lte/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+    <script src="/static/admin-lte/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+    <script src="/static/admin-lte/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+    <script src="/static/admin-lte/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
+    <script src="/static/admin-lte/plugins/jszip/jszip.min.js"></script>
+    <script src="/static/admin-lte/plugins/pdfmake/pdfmake.min.js"></script>
+    <script src="/static/admin-lte/plugins/pdfmake/vfs_fonts.js"></script>
+    <script src="/static/admin-lte/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
+    <script src="/static/admin-lte/plugins/datatables-buttons/js/buttons.print.min.js"></script>
+    <script src="/static/admin-lte/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
+
+    <script src="/static/admin-lte/dist/js/adminlte.min.js?v=3.2.0"></script>
+
+    <script src="/static/admin-lte/dist/js/demo.js"></script>
+    <script src="/static/admin-lte/plugins/datatables/jquery.dataTables.min.js"></script>
+    <script src="/static/admin-lte/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
 </body>
-</html>
+</html
